--- a/index.html
+++ b/index.html
@@ -10,40 +10,42 @@
 
 <body>
 
-<div class="board" id="title">
+<main role = "main">
+	<div class="board" id="title">
 	<button id="startbtn">遊ぶ</button>
-</div>
+	</div>
 
-<div class="board" id="game">
-	<h1>神経衰弱</h1>
-	<p class="toolbar">
-		<span id="turn">あなたの番です</span>
-		<button id="restartbtn">もう一度始める</button>
-		<div id="clear"></div>
-	</p>
-	<ul class="cards">
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png" class="lastimg"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png" class="lastimg"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png" class="lastimg"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png"></li>
-		<li><img src="img/cardback.png" class="lastimg"></li>
-	</ul>
-</div>
+	<div class="board" id="game">
+		<h1>神経衰弱</h1>
+		<div class="toolbar">
+			<span id="turn">あなたの番です</span>
+			<button id="restartbtn">もう一度始める</button>
+			<div id="clear"></div>
+		</div>
+		<ul class="cards">
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="lastimg cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="lastimg cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="lastimg cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="cardimg"></li>
+			<li><img src="img/cardback.png" class="lastimg cardimg"></li>
+		</ul>
+	</div>
+</main>
 
 </body>
 </html>
