--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charaset="utf-8">
+<meta charset="utf-8">
 <title>神経衰弱</title>
 <link rel="stylesheet" href="style-reset.css">
 <link rel="stylesheet" href="style.css">
